# HipCortex

./: .gitignore  Cargo.toml  How to Test as a User  LICENSE  LICENSE (MIT)  NOTICE  README.md  Top-Level Directory Structure.md  build.rs  license.md  tauri.conf.json
.github/workflows/: ci.yml
benches/: symbolic_graph_bench.rs  symbolic_store_bench.rs  temporal_indexer_bench.rs
benchmarks/: criterion_bench.rs
docs/: agent.md  api_contract.md  architecture.md  business_context.md  contributing.md  data_model.md  integration.md  memory_design.md  roadmap.md  test_plan.md  usage.md  usage_guide.md
examples/: mcp_server.rs  plugin_host.rs  quickstart.rs  rag_export.rs  world_model_example.rs
fixtures/: sample_memory_trace.json  sample_memory_traces.json  sample_perception_input.json  sample_procedural_policy.json  sample_reflexion_snapshot.json  sample_symbolic_graph.json  sample_symbolic_node.json  sample_temporal_event.json
migrations/00000000000000_create_memory_tables/: down.sql  up.sql
proto/: memory.proto
schemas/: perception_adapter.json  procedural_memory.json  reflexion_memory.json  symbolic_edge.json  symbolic_memory.json  temporal_memory.json
scripts/: codex_startup.sh  import_trace.rs  migrate.rs  rag_hook.rs
shaders/: avg.wgsl
src/: a2a_protocol.rs  async_memory_store.rs  audit_log.rs  aureus_bridge.rs  conversation_memory.rs  dashboard.rs  decay.rs  grpc_server.rs  gui.rs  integration_layer.rs  knowledge_export.rs  lib.rs  main.rs  markov.rs  mcp_server.rs  memory_cli.rs  memory_diff.rs  memory_processor.rs  memory_query.rs  memory_record.rs  memory_store.rs  perception_adapter.rs  persistence.rs  plugin_host.rs  poisson.rs  procedural_cache.rs  rag_adapter.rs  retrieval_pipeline.rs  rocksdb_backend.rs  sandbox.rs  schema.rs  segmented_buffer.rs  semantic_compression.rs  snapshot_manager.rs  symbolic_store.rs  temporal_indexer.rs  vision_encoder.rs  web_server.rs
src/backends/: neo4j_backend.rs  petgraph_backend.rs  postgres_backend.rs  rustfsm_backend.rs  temporal_backend.rs
src/llm_clients/: claude.rs  llama.rs  mock.rs  mod.rs  ollama.rs  openai.rs
src/math/: entropy.rs  mod.rs  norm.rs  pca.rs
src/memory/: mod.rs  perception.rs  procedural.rs  reflexion.rs  symbolic.rs  temporal.rs
src/modules/: aureus_bridge.rs  effort.rs  enhancement_advisor.rs  hypotheses_graph.rs  hypothesis_manager.rs  integration_layer.rs  perception_adapter.rs  procedural_cache.rs  puzzle.rs  symbolic_store.rs  temporal_indexer.rs  world_model.rs
tests/: aureus_bridge_tests.rs  cli_tests.rs  integration_layer_tests.rs  integration_tests.rs  memory_store_tests.rs  perception_adapter_tests.rs  snapshot_manager_tests.rs  symbolic_store_tests.rs  system_integration_tests.rs  uat_tests.rs  vision_encoder_tests.rs
tests/integration/: cli_tests.rs  conversation_memory_sit.rs  conversation_memory_uat.rs  edge_workflow_sit.rs  edge_workflow_uat.rs  effort_confidence_sit.rs  effort_confidence_uat.rs  grpc_tests.rs  humanoid_perception_uat.rs  integration_tests.rs  llm_integration_tests.rs  mcp_server_sit.rs  mcp_server_uat.rs  mod.rs  openmanus_integration_sit.rs  plugin_host_sit.rs  plugin_host_uat.rs  rag_export_sit.rs  rag_export_uat.rs  (+11 more)
ui/: index.html  main.js  style.css
(+55 files in other folders)
