[package]
name = "hipcortex"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
flate2 = "1"
tar = "0.4"

[dev-dependencies]
proptest = "1"
criterion = "0.5"

[[bench]]
name = "temporal_indexer_bench"
harness = false

