[package]
name = "hipcortex"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["."]

[dependencies]
axum = { version = "0.6", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tauri = { version = "1", optional = true }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
flate2 = "1"
tar = "0.4"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
diesel = { version = "2", features = ["postgres", "sqlite", "serde_json"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
sha2 = "0.10"
hex = "0.4"
aes-gcm = "0.10"
aead = "0.5"
rand = "0.8"
base64 = "0.21"
zstd = "0.13"
lazy_static = "1"
lru = "0.12"
sled = "0.34"
futures = "0.3"
bytemuck = "1"
rocksdb = "0.21"
wasmtime = { version = "8", optional = true }
wat = { version = "1", optional = true }
mustache = "0.9"
indexmap = "1"
rayon = { version = "1", optional = true }
async-trait = { version = "0.1", optional = true }
wgpu = { version = "0.16", optional = true }
tonic = { version = "0.9", features = ["transport"], optional = true }
prost = { version = "0.11", optional = true }

[dev-dependencies]
proptest = "1"
criterion = "0.5"
assert_cmd = "2"
predicates = "3"
pollster = "0.3"
tempfile = "3"

[build-dependencies]
tonic-build = { version = "0.9", optional = true }

[[bench]]
name = "temporal_indexer_bench"
harness = false

[[bench]]
name = "symbolic_store_bench"
harness = false


[features]
web-server = ["axum", "tokio"]
gui = ["tauri"]
plugin = ["wasmtime", "wat"]
async-store = ["tokio", "async-trait"]
parallel = ["rayon"]
gpu = ["wgpu"]
grpc-server = ["tonic", "prost", "tokio", "tonic-build"]
